[package]
authors = ["Me"]
edition = "2021"
license = "MIT"
name = "ddos-protection"
publish = false
version = "0.1.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = "0.8.3"
async-stream = { version = "0.3" }
futures = { version = "0.3"}
tokio-stream = { version = "0.1" }
rand = { version = "0.8" }
sha2 = "0.10.6"
reqwest = {version = "0.11.13", features = ["json", "blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }